Added content for Contact Us page Colour scheme to be worked on To create logo and implement it

--- a/about-us.html
+++ b/about-us.html
@@ -57,7 +57,7 @@
     <strong>The Peak Reckz Team</strong>
     <div class="secbr"></div>
     <strong>Ready to Dive in?</strong>
-    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal reccomendations</strong></a></p>
+    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal recomendations</strong></a></p>
     <div class="secbr"></div>
     <button onclick="scrtopFunction()" id="BTTBtn" title="Go to top">Back To Top</button>
    </main>
