--- a/contact-us.html
+++ b/contact-us.html
@@ -34,8 +34,7 @@
   <div></div>
    <main>
     <h4>Got a Question?</h4>
-    <p>We're here to help with any queries you may have, looking forward to hearing from you!</p>
-    <section>
+    <p class="cuf">We're here to help with any queries you may have, looking forward to hearing from you!</p>
     <article class="wrapper">
       <h2>Contact Us</h2>
       <div id="error_message">
@@ -73,10 +72,48 @@
           </div>
       </form>
     </article>
-    </section>
-
+    <div class="secbr"></div>
   </main>
     <footer>
+    <div class="faqbx">
+    <h2 style="text-decoration: underline;">FAQ</h2>
+    <section>
+    <article>
+    <div class="faq">
+    <strong style="text-decoration: underline;">What is the Purpose of this website?</strong>
+    <p>Our website provides personalized recommendations for anime and manga based on your preferences.</p>
+    </div>
+    </article>
+    <div class="secbr"></div>
+    <article>
+    <div class="faq">
+    <strong style="text-decoration: underline;">How do your recommendations work?</strong>
+    <p>We use a combination of user ratings, reviews, and expert suggestions to curate personalized recommendations for you.</p>
+    </div>
+    </article>
+    <div class="secbr"></div>
+    <article>
+    <div class="faq">
+    <strong style="text-decoration: underline;">How often are new recommendations added?</strong>
+    <p>We update our recommendations regularly to include the latest and most popular anime and manga.</p>
+    </div>
+    </article>
+    <div class="secbr"></div>
+    <article>
+    <div class="faq">
+    <strong style="text-decoration: underline;">Do you offer reviews or recommendations?</strong>
+    <p>As of now, we offer recommendations based on curated reviews to help you decide what to watch or read next.</p>
+    </div>
+    </article>
+    <div class="secbr"></div>
+    <article>
+    <div class="faq">
+    <strong style="text-decoration: underline;">I’m having trouble with the website. What should I do?</strong>
+    <p>If you encounter any issues with our website, please try clearing your browser cache or using a different browser. If the problem persists, contact our support team.</p>
+    </div>
+    </article>
+    </section>
+    </div>
     <nav class="extPLinks">
     <ul>
     <li>
