--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
     </section>
     <strong>Ready to Dive in?</strong>
     <p>Grab some popcorn, find a comfy spot, and start exploring the wonderful world of anime. Whether you're laughing along with One Punch Man, feeling the feels with Your Lie in April, or going on a wild adventure with Naruto, you're in for a treat!</p>
-    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal reccomendations</strong></a></p>
+    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal recomendations</strong></a></p>
   </main>
     <footer>
     <nav class="extPLinks">
