Colour scheme finalized Made code consistent No further changes needed Project complete

--- a/comedy.html
+++ b/comedy.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Comedy | PR</title>
-    <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
+    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
   </head>
   <body>
   <header>
-  <h1 class="pageheading">BANNER HERE!</h1>
-  <nav class="intPLinks">
+  <a href=home.html> <img src="images/prlg.png" class="slogo" alt="Peak Reckz Logo"></a>
+  <nav style="margin-top: 6rem;" class="intPLinks">
   <ul>
     <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <strong>Genres</strong>
+      <strong style="color: white; text-shadow: 2px 2px 2px #000000;">Genres</strong>
       <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
@@ -33,7 +33,8 @@
 
   <div></div>
   <main>
-    <h1 class="pageheading">Comedy!</h1>
+    <h2 class="pageheading">Comedy!</h2>
+    <p>Laugh out loud with our recommended comedy series. These stories are packed with humor, quirky characters, and hilarious situations that will brighten your day.</p>
     <div></div>
     <section>
     <article>
@@ -51,7 +52,7 @@
     <p class="infol"><strong>Start:</strong> 1997</p>
     <p class="infol"><strong>End:</strong> N/A</p>
     <br>
-    <h4>Summary:</h4><p class="summary">Barely surviving in a barrel after passing through a terrible whirlpool at sea, carefree Monkey D. Luffy ends up aboard a ship under attack by fearsome pirates. Despite being a naive-looking teenager, he is not to be underestimated. Unmatched in battle,<span id="dots1">...</span><span id="expand1"> Luffy is a pirate himself who resolutely pursues the coveted One Piece treasure and the King of the Pirates title that comes with it.
+    <h4>Summary:</h4><p class="summary">Barely surviving in a barrel after passing through a terrible whirlpool at sea, carefree Monkey D. Luffy ends up aboard a ship under attack by fearsome pirates. Despite being a naive-looking teenager, he is not to be underestimated. Unmatched in battle<span id="dots1">...</span><span id="expand1">, Luffy is a pirate himself who resolutely pursues the coveted One Piece treasure and the King of the Pirates title that comes with it.
       The late King of the Pirates, Gol D. Roger, stirred up the world before his death by disclosing the whereabouts of his hoard of riches and daring everyone to obtain it. Ever since then, countless powerful pirates have sailed dangerous seas for the prized One Piece only to never return. Although Luffy lacks a crew and a proper ship, he is endowed with a superhuman ability and an unbreakable spirit that make him not only a formidable adversary but also an inspiration to many.
       As he faces numerous challenges with a big smile on his face, Luffy gathers one-of-a-kind companions to join him in his ambitious endeavor, together embracing perils and wonders on their once-in-a-lifetime adventure.</span></p>
     <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
@@ -92,7 +93,7 @@
     <p class="infol"><strong>Start:</strong> 2014</p>
     <p class="infol"><strong>End:</strong> N/A</p>
     <br>
-    <h4>Summary:</h4><p class="summary">After dying a laughable and pathetic death on his way back from buying a game, high school student and recluse Kazuma Satou finds himself sitting before a beautiful but obnoxious goddess named Aqua. She provides the NEET with two options:<span id="dots3">...</span><span id="expand3"> continue on to heaven or reincarnate in every gamer's dream—a real fantasy world! Choosing to start a new life, Kazuma is quickly tasked with defeating a Demon King who is terrorizing villages. But before he goes, he can choose one item of any kind to aid him in his quest, and the future hero selects Aqua. But Kazuma has made a grave mistake—Aqua is completely useless!
+    <h4>Summary:</h4><p class="summary">After dying a laughable and pathetic death on his way back from buying a game, high school student and recluse Kazuma Satou finds himself sitting before a beautiful but obnoxious goddess named Aqua. She provides the NEET with two options<span id="dots3">...</span><span id="expand3">: continue on to heaven or reincarnate in every gamer's dream—a real fantasy world! Choosing to start a new life, Kazuma is quickly tasked with defeating a Demon King who is terrorizing villages. But before he goes, he can choose one item of any kind to aid him in his quest, and the future hero selects Aqua. But Kazuma has made a grave mistake—Aqua is completely useless!
       Unfortunately, their troubles don't end here; it turns out that living in such a world is far different from how it plays out in a game. Instead of going on a thrilling adventure, the duo must first work to pay for their living expenses. Indeed, their misfortunes have only just begun!</span></p>
     <button onclick="myFunctionc()" id="rmBtn3">Read more</button>
     </div>
@@ -112,7 +113,7 @@
     <p class="infor"><strong>Start:</strong> 2004</p>
     <p class="infor"><strong>End:</strong> 2012</p>
     <br>
-    <h4>Summary:</h4><p class="summary">There is no putting it lightly—Tsunayoshi Sawada is just no good. He is clumsy, talentless, and desperately in love with the school idol Kyouko Sasagawa, a girl so completely out of his league. Dubbed "Loser Tsuna" by his classmates,<span id="dots4">...</span><span id="expand4"> he seems to be the very personification of failure in the guise of a middle-schooler.
+    <h4>Summary:</h4><p class="summary">There is no putting it lightly—Tsunayoshi Sawada is just no good. He is clumsy, talentless, and desperately in love with the school idol Kyouko Sasagawa, a girl so completely out of his league. Dubbed "Loser Tsuna" by his classmates<span id="dots4">...</span><span id="expand4">, he seems to be the very personification of failure in the guise of a middle-schooler.
       Tsuna's boring life takes an extraordinary twist when he encounters the mysterious Reborn, who happens to be a hitman... and shockingly, a baby! Sent from the strongest Mafia family in Italy, Reborn is assigned the daunting mission of preparing the dull middle schooler to succeed the ninth boss of the notorious Vongola family, who is on the brink of retirement. The dull boy has a grueling road ahead, but with the help of his new criminal affiliates and his peculiar home tutor, perhaps even Loser Tsuna can achieve greatness.</span></p>
     <button onclick="myFunctiond()" id="rmBtn4">Read more</button>
     </div>
