--- a/home.html
+++ b/home.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Home | PR</title>
-    <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
+    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
   </head>
   <body>
   <header>
-  <h1 class="pageheading">BANNER HERE!</h1>
-  <nav class="intPLinks">
+  <a href=home.html> <img src="images/prlg.png" class="slogo" alt="Peak Reckz Logo"></a>
+  <nav style="margin-top: 6rem;" class="intPLinks">
   <ul>
     <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <strong>Genres</strong>
+      <strong style="color: white; text-shadow: 2px 2px 2px #000000;">Genres</strong>
       <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
@@ -33,7 +33,7 @@
 
   <div></div>
    <main>
-    <h1 class="pageheading">Welcome to Peak Reckz!</h1>
+    <h2 class="pageheading">Welcome to Peak Reckz!</h2>
     <div class="secbr"></div>
     <strong>Your Gateway to the World of Manga and Anime</strong>
     <p>At Peak Reckz, we're passionate about manga and anime and are committed to bringing you the best content, resources, and community connections. Whether you're a longtime fan or just starting, our platform has everything you need to dive deeper into these fascinating art forms.</p>
@@ -49,16 +49,16 @@
     <div class="secbr"></div>
     <section>
     <article>
-    <strong>Anime</strong>
+    <strong class="av">Anime</strong>
     <div class="secbr"></div>
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/ERm-bonZK3I?si=Gbn1WjnzbFSGWCXt&mute=1" allowfullscreen>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/TwHA-TXvaP0?si=ybjMliZFWMUJHGEj&mute=1" allowfullscreen alt="Video of Anime recommendations.">
     </iframe>
     </article>
     <article>
-    <strong>Manga</strong>
+    <strong class="mv">Manga</strong>
     <div class="secbr"></div>
     <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/sh1kS2reJOk?si=lMSA9xM70b2MbBah&mute=1" allowfullscreen>
+    src="https://www.youtube.com/embed/sh1kS2reJOk?si=lMSA9xM70b2MbBah&mute=1" allowfullscreen alt="Video of Manga recommendations">
     </iframe>
     </article>
     </section>
