--- a/oreckz.html
+++ b/oreckz.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Reckz | PR</title>
-    <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
+    <title>Our Reckz | PR</title>
+    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
   </head>
   <body>
   <header>
-  <h1 class="pageheading">BANNER HERE!</h1>
-  <nav class="intPLinks">
+  <a href=home.html> <img src="images/prlg.png" class="slogo" alt="Peak Reckz Logo"></a>
+  <nav style="margin-top: 6rem;" class="intPLinks">
   <ul>
     <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <strong>Genres</strong>
+      <strong style="color: white; text-shadow: 2px 2px 2px #000000;">Genres</strong>
       <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
@@ -33,9 +33,11 @@
 
   <div></div>
   <main>
-    <h1 class="pageheading">Reckz!</h1>
-    <div></div>
-    <wbr>
+    <h2 class="pageheading">Curated Collection</h2>
+    <p>Dive into our curated selection of manga and anime series that are sure to captivate and inspire you. Whether you’re a seasoned fan or new to the world of manga and anime, our recommendations cover a wide range of genres and themes to suit every taste.</p>
+    <div class="secbr"></div>
+    <h3>Top Picks:</h3>
+    <div class="secbr"></div>
     <section>
     <a class="a1" href="f-ma.html">
     <h3 class="seriesHeading">Fighting/Martial Arts</h3>
@@ -64,6 +66,12 @@
     <h3 class="seriesHeading">Music</h3>
     </a>
     </section>
+    <div class="secbr"></div>
+    <strong>Discover Your Next Favourite Series</strong>
+    <p>Our recommendations are regularly updated to include the latest and greatest in manga and anime. We aim to provide a diverse selection that caters to all preferences and interests. So, take a look around, and you’re sure to find your next favorite series!</p>
+    <div class="secbr"></div>
+    <strong>Happy Exploring!</strong>
+    <p>Thank you for visiting our Series Recommendations page. We hope you find something you love and enjoy the exciting world of manga and anime!</p>
     <div class="secbr"></div>
     <button onclick="scrtopFunction()" id="BTTBtn" title="Go to top">Back To Top</button>
   </main>
