--- a/b-a.html
+++ b/b-a.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Battle/Action | PR</title>
-    <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
+    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
   </head>
   <body>
   <header>
-  <h1 class="pageheading">BANNER HERE!</h1>
-  <nav class="intPLinks">
+  <a href=home.html> <img src="images/prlg.png" class="slogo" alt="Peak Reckz Logo"></a>
+  <nav style="margin-top: 6rem;" class="intPLinks">
   <ul>
     <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <strong>Genres</strong>
+      <strong style="color: white; text-shadow: 2px 2px 2px #000000;">Genres</strong>
       <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
@@ -33,7 +33,8 @@
 
   <div></div>
   <main>
-    <h1 class="pageheading">Battle/Action!</h1>
+    <h2 class="pageheading">Battle/Action!</h2>
+    <p>Get your adrenaline pumping with our top battle and action picks. These series are filled with epic battles, thrilling quests, and heroic journeys that will keep you on the edge of your seat.</p>
     <div></div>
     <section>
     <article>
@@ -51,7 +52,7 @@
     <p class="infol"><strong>Start:</strong> 1999</p>
     <p class="infol"><strong>End:</strong> 2014</p>
     <br>
-    <h4>Summary:</h4><p class="summary">Moments before Naruto Uzumaki's birth, a huge demon known as the Nine-Tailed Fox attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the demon's rampage, the leader of the village, the Fourth Hokage,<span id="dots1">...</span><span id="expand1"> sacrificed his life and sealed the monstrous beast inside the newborn Naruto.
+    <h4>Summary:</h4><p class="summary">Moments before Naruto Uzumaki's birth, a huge demon known as the Nine-Tailed Fox attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the demon's rampage, the leader of the village, the Fourth Hokage<span id="dots1">...</span><span id="expand1">, sacrificed his life and sealed the monstrous beast inside the newborn Naruto.
       In the present, Naruto is a hyperactive and knuckle-headed ninja growing up within Konohagakure. Shunned because of the demon inside him, Naruto struggles to find his place in the village. His one burning desire to become the Hokage and be acknowledged by the villagers who despite him. However, while his goal leads him to unbreakable bonds with lifelong friends, it also lands him in the crosshairs of many deadly foes.</span></p>
     <button onclick="myFunctiona()" id="rmBtn1">Read more</button>
     </div>
