--- a/h-s.html
+++ b/h-s.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Horror/Supernatural | PR</title>
-    <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
+    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
   </head>
   <body>
   <header>
-  <h1 class="pageheading">BANNER HERE!</h1>
-  <nav class="intPLinks">
+  <a href=home.html> <img src="images/prlg.png" class="slogo" alt="Peak Reckz Logo"></a>
+  <nav style="margin-top: 6rem;" class="intPLinks">
   <ul>
     <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <strong>Genres</strong>
+      <strong style="color: white; text-shadow: 2px 2px 2px #000000;">Genres</strong>
       <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
@@ -33,7 +33,8 @@
 
   <div></div>
   <main>
-    <h1 class="pageheading">Horror/Supernatural!</h1>
+    <h2 class="pageheading">Horror/Supernatural!</h2>
+    <p>Uncover dark secrets and experience spine-chilling thrills with our horror and supernatural recommendations. These series will keep you guessing and provide plenty of suspense and eerie moments.</p>
     <div></div>
     <section>
     <article>
