Alignment issues sorted, aesthetics improved, series status updated

--- a/b-a.html
+++ b/b-a.html
@@ -88,9 +88,9 @@
     <p class="infol"><strong>End:</strong> N/A</p>
     <div class="secbr"></div>
     <p class="infol"><strong>Manga:</strong> Yes</p>
-    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Status:</strong> Complete</p>
     <p class="infol"><strong>Start:</strong> 2014</p>
-    <p class="infol"><strong>End:</strong> N/A</p>
+    <p class="infol"><strong>End:</strong> 2024</p>
     <br>
     <h4>Summary:</h4><p class="summary">The appearance of "quirks," newly discovered super powers, has been steadily increasing over the years, with 80 percent of humanity possessing various abilities from manipulation of elements to shapeshifting. This leaves the remainder of the world<span id="dots3">...</span><span id="expand3"> completely powerless, and Izuku Midoriya is one such individual.
       Since he was a child, the ambitious middle schooler has wanted nothing more than to be a hero. Izuku's unfair fate leaves him admiring heroes and taking notes on them whenever he can. But it seems that his persistence has borne some fruit: Izuku meets the number one hero and his personal idol, All Might. All Might's quirk is a unique ability that can be inherited, and he has chosen Izuku to be his successor!
