--- a/oreckz.html
+++ b/oreckz.html
@@ -36,10 +36,10 @@
     <h2 class="pageheading">Curated Collection</h2>
     <p>Dive into our curated selection of manga and anime series that are sure to captivate and inspire you. Whether you’re a seasoned fan or new to the world of manga and anime, our recommendations cover a wide range of genres and themes to suit every taste.</p>
     <div class="secbr"></div>
-    <strong>Discover Your Next Favourite Series</strong>
+    <p><strong>Discover Your Next Favourite Series</strong></p>
     <p>Our recommendations are carefully curated to include the greatest in manga and anime, old and new. We aim to provide a diverse selection that caters to all preferences and interests. So, take a look around, and you’re sure to find your next favorite series!</p>
     <div class="secbr"></div>
-    <h3>Top Picks:</h3>
+    <h3 style="text-align: justify;">Top Picks:</h3>
     <div class="secbr"></div>
     <section>
     <a class="a1" href="f-ma.html">
@@ -70,7 +70,7 @@
     </a>
     </section>
     <div class="secbr"></div>
-    <strong>Happy Exploring!</strong>
+    <p><strong>Happy Exploring!</strong></p>
     <p>Thank you for visiting our Series Recommendations page. We hope you find something you love and enjoy the exciting world of manga and anime!</p>
     <div class="secbr"></div>
     <button onclick="scrtopFunction()" id="BTTBtn" title="Go to top">Back To Top</button>
