--- a/drama.html
+++ b/drama.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Drama | PR</title>
-    <link rel="icon" href="images/prini.png"> <!--adds icon in page title-->
+    <link rel="icon" href="images/prini.png">
   </head>
   <body>
   <header>
